# PySolFC

./: pyproject.toml
pysollib/: hint.py
pysollib/tk/: tabpage.py
scripts/: gen_individual_importing_tests.py
